--- a/src/components/List/List.module.scss
+++ b/src/components/List/List.module.scss
@@ -35,6 +35,7 @@
 
 .columns {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     flex-wrap: wrap;
+    gap: 20px;
 }
