--- a/src/components/Favorite/Favorite.module.scss
+++ b/src/components/Favorite/Favorite.module.scss
@@ -1,8 +1,25 @@
+@use "sass:math";
 @import '../../styles/settings.scss';
 
 .favorite {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
   
-  p {
-    color: $color-light;
+  &__list {
+    background: $color-light;
+    margin: 0 0 $base-size 0;
+    padding: ($base-size * 1.5);
+    border-radius: $radius;
+    box-shadow: 0 math.div($base-size, 4) 0 rgba(0,0,0,0.3);
+    color: $color-dark;
+    min-width: 33%;
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+  }
+
+  .header {
+    text-align: center;
   }
 }
